# procrystalline_lattice_SFML_gui

./: README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  PROCRYSTAL.cbp  a.out  cmake_install.cmake  crys_mark.crds  final_vmd.xyz  initial_vmd.xyz  lattice.cpp  lattice.h  main.cpp  node.cpp  node.h  optimise_silica.inpt  procrystal.inpt  procrystal.x  procrystal_original.inpt  python_file.txt  ring.cpp  sampler.cpp  sampler.h  sub_script  sub_script_0_0_0  vecr.h  vecr.tpp  vecr_broken.h  vecr_broken.tpp
src/NEW_MASTER/: crys.crds  procrystal.inpt  procrystal.x
src/NEW_MASTER/myoutput/: 0_monolayer.xyz  1_monolayer.xyz
src/output/: crys.crds  make_vmd.py  original_vmd.xyz
